Fix facility service