@@ -3,7 +3,13 @@ package facility.service;
 
 import facility.repository.FacilityRepository;
 import facility.web.models.Facility;
+import facility.web.models.FacilityAddress;
 import facility.web.models.FacilityCreateRequest;
+import facility.web.models.Idgen.IdGenerationRequest;
+import facility.web.models.Idgen.IdGenerationResponse;
+import facility.web.models.Idgen.IdRequest;
+import facility.web.models.Idgen.IdResponse;
+import org.egov.common.contract.request.RequestInfo;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.ResponseEntity;
@@ -11,6 +17,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
 import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 public class FacilityService {
@@ -61,95 +69,185 @@ public class FacilityService {
     }
 
     private void validateAgainstMDMS(Facility facility, String tenantId) {
-        String url = String.format("%s:%s/egov-mdms-service/v1/_search", mdmsHost, mdmsPort);
-
-        Map<String, Object> mdmsRequest = new HashMap<>();
-        Map<String, Object> requestInfo = new HashMap<>(); // Replace with actual RequestInfo if available
-        mdmsRequest.put("RequestInfo", requestInfo);
-
-        Map<String, Object> moduleDetail = new HashMap<>();
-        moduleDetail.put("moduleName", "common-masters");
-
-        List<Map<String, String>> masterDetails = new ArrayList<>();
-        masterDetails.add(Map.of("name", "FacilityType"));
-        masterDetails.add(Map.of("name", "FacilityCategory"));
-        masterDetails.add(Map.of("name", "FacilityOwnership"));
-
-        moduleDetail.put("masterDetails", masterDetails);
-
-        Map<String, Object> mdmsCriteria = new HashMap<>();
-        mdmsCriteria.put("tenantId", tenantId);
-        mdmsCriteria.put("moduleDetails", List.of(moduleDetail));
-
-        mdmsRequest.put("MdmsCriteria", mdmsCriteria);
+        String url = String.format("%s:%s/egov-mdms-service/v2/_search", mdmsHost, mdmsPort);
+        Map<String, Object> requestInfo = Map.of("authToken", ""); // Set token if required
+        Map<String, Object> mdmsRequest = Map.of(
+                "RequestInfo", requestInfo,
+                "MdmsCriteria", Map.of(
+                        "tenantId", tenantId,
+                        "moduleDetails", List.of(
+                                Map.of("moduleName", "data-ingestion", "masterDetails", List.of(Map.of("name", "FacilityIngestionSchema"))),
+                                Map.of("moduleName", "facility", "masterDetails", List.of(
+                                        Map.of("name", "FacilityType"),
+                                        Map.of("name", "FacilityCategory"),
+                                        Map.of("name", "FacilityOwnership")
+                                ))
+                        )
+                )
+        );
 
         ResponseEntity<Map> response = restTemplate.postForEntity(url, mdmsRequest, Map.class);
+        if (!response.getStatusCode().is2xxSuccessful()) throw new RuntimeException("MDMS call failed");
 
-        if (!response.getStatusCode().is2xxSuccessful()) {
-            throw new RuntimeException("Failed to fetch MDMS data for validation");
+        List<Map<String, Object>> mdmsList = (List<Map<String, Object>>) response.getBody().get("mdms");
+        Map<String, Object> schema = mdmsList.stream()
+                .filter(m -> "data-ingestion.FacilityIngestionSchema".equals(m.get("schemaCode")))
+                .findFirst()
+                .map(m -> (Map<String, Object>) m.get("data"))
+                .orElseThrow(() -> new RuntimeException("FacilityIngestionSchema not found"));
+
+        List<Map<String, Object>> columns = (List<Map<String, Object>>) schema.get("columns");
+        Map<String, Object> input = convertFacilityToMap(facility);
+
+        for (Map<String, Object> col : columns) {
+            String name = (String) col.get("name");
+
+            // Determine the key used in input map (defaults to column name)
+            String key = name;
+            if (col.containsKey("svcSource")) {
+                key = ((Map<String, String>) col.get("svcSource")).get("key");
+            } else if (col.containsKey("mdmsSource") && !key.equals("Type of HC")) {
+                key = ((Map<String, String>) col.get("mdmsSource")).get("path").replace("$.", "");
+            }
+
+            Object value = input.get(key);
+
+            if (Boolean.TRUE.equals(col.get("required")) && (value == null || value.toString().isBlank())) {
+                throw new IllegalArgumentException("Missing required field: " + name);
+            }
+
+            if (value != null && col.containsKey("pattern")) {
+                String pattern = (String) col.get("pattern");
+                if (!value.toString().matches(pattern)) {
+                    throw new IllegalArgumentException("Invalid format for " + name + ": " + value);
+                }
+            }
+
+            if (value != null && col.containsKey("mdmsSource")) {
+                Map<String, String> src = (Map<String, String>) col.get("mdmsSource");
+                String schemaCode = src.get("module") + "." + src.get("master");
+
+                Set<String> valid = mdmsList.stream()
+                        .filter(m -> schemaCode.equals(m.get("schemaCode")))
+                        .map(m -> (Map<String, Object>) m.get("data"))
+                        .map(d -> (String) d.get(src.get("path").replace("$.", "")))
+                        .collect(Collectors.toSet());
+
+                if (!valid.contains(value.toString())) {
+                    throw new IllegalArgumentException("Invalid value for " + name + ": " + value);
+                }
+            }
         }
 
-        Map<String, Object> mdmsRes = response.getBody();
-        Map<String, Object> mdms = (Map<String, Object>) mdmsRes.get("MdmsRes");
-        Map<String, Object> commonMasters = (Map<String, Object>) mdms.get("common-masters");
 
-        Set<String> validFacilityTypes = extractCodeSet(commonMasters, "FacilityType");
-        Set<String> validFacilityCategories = extractCodeSet(commonMasters, "FacilityCategory");
-        Set<String> validFacilityOwnerships = extractCodeSet(commonMasters, "FacilityOwnership");
-
-        if (!validFacilityTypes.contains(facility.getFacilityType())) {
-            throw new IllegalArgumentException("Invalid Facility Type: " + facility.getFacilityType());
-        }
-
-        if (!validFacilityCategories.contains(facility.getFacilityCategory())) {
-            throw new IllegalArgumentException("Invalid Facility Category: " + facility.getFacilityCategory());
-        }
-
-        if (!validFacilityOwnerships.contains(facility.getFacilityOwnership())) {
-            throw new IllegalArgumentException("Invalid Facility Ownership: " + facility.getFacilityOwnership());
+        List<Map<String, Object>> rowConstraints = (List<Map<String, Object>>) schema.get("rowConstraints");
+        for (Map<String, Object> c : rowConstraints) {
+            List<String> fields = (List<String>) c.get("fields");
+            long present = fields.stream().filter(f -> input.get(f) != null && !input.get(f).toString().isBlank()).count();
+            switch ((String) c.get("type")) {
+                case "atLeastOneRequired":
+                    if (present < 1) throw new IllegalArgumentException((String) c.get("message"));
+                    break;
+                case "allOrNoneRequired":
+                    if (present > 0 && present < fields.size())
+                        throw new IllegalArgumentException((String) c.get("message"));
+                    break;
+            }
         }
     }
 
-    private Set<String> extractCodeSet(Map<String, Object> module, String masterName) {
-        List<Map<String, Object>> masterData = (List<Map<String, Object>>) module.get(masterName);
-        Set<String> codes = new HashSet<>();
-        for (Map<String, Object> item : masterData) {
-            codes.add((String) item.get("code"));
+    private Map<String, Object> convertFacilityToMap(Facility f) {
+        Map<String, Object> map = new HashMap<>();
+
+        FacilityAddress addr = f.getAddress();
+        if (addr != null) {
+            map.put("Latitude", addr.getLatitude());
+            map.put("Longitude", addr.getLongitude());
+            map.put("Address", buildFullAddress(addr));
+            map.put("City", addr.getCity());
+            map.put("Pincode", addr.getPincode());
+            map.put("State", addr.getDetail());     // Adjust if you later map "State" specifically
+            map.put("District", addr.getDetail());  // Adjust if schema defines them separately
+            map.put("Block", addr.getDetail());     // Optional fallback
         }
-        return codes;
+
+        map.put("Health Centre Name", f.getFacilityName());
+        map.put("Type of HC", f.getFacilityType());
+
+        map.put("boundaryCode", get(f.getFacilityDetails(), "boundaryCode"));
+
+        map.put("HFR ID", get(f.getFacilityDetails(), "hfrId"));
+        map.put("NIN ID", get(f.getFacilityDetails(), "ninId"));
+        map.put("Vendor Code", get(f.getFacilityDetails(), "vendorCode"));
+        map.put("Solution Design Type", get(f.getFacilityDetails(), "solutionDesignType"));
+        map.put("HC PoC Name", get(f.getFacilityDetails(), "pocName"));
+        map.put("HC PoC Designation", get(f.getFacilityDetails(), "pocDesignation"));
+        map.put("HC PoC Contact number", get(f.getFacilityDetails(), "pocContact"));
+
+        return map;
     }
 
-    private UUID generateFacilityId(String tenantId) {
-        Map<String, Object> requestInfo = new HashMap<>(); // Use real RequestInfo if available
+    private String buildFullAddress(FacilityAddress addr) {
+        return Stream.of(
+                        addr.getAddressNumber(),
+                        addr.getAddressLine1(),
+                        addr.getAddressLine2(),
+                        addr.getLandmark(),
+                        addr.getCity(),
+                        addr.getPincode()
+                ).filter(Objects::nonNull)
+                .filter(s -> !s.isBlank())
+                .collect(Collectors.joining(", "));
+    }
 
-        Map<String, Object> idRequest = Map.of(
-                "idName", "facility.id",
-                "tenantId", tenantId,
-                "format", "",
-                "count", 1
-        );
 
-        Map<String, Object> payload = Map.of(
-                "RequestInfo", requestInfo,
-                "idRequests", List.of(idRequest)
-        );
+    private Object get(Map<String, Object> map, String key) {
+        return map != null ? map.get(key) : null;
+    }
 
+    private String generateFacilityId(String tenantId) {
+
+        RequestInfo requestInfo = RequestInfo.builder()
+                .apiId("org.egov.facility")
+                .ver("1.0")
+                .ts(System.currentTimeMillis())
+                .action("create")
+                .did("1")
+                .msgId(UUID.randomUUID().toString())
+                .authToken("") // Optional or pass a real token if needed
+                .build();
+
+        // Build the ID request object
+        IdRequest idRequest = IdRequest.builder()
+                .idName("facility.id")
+                .tenantId(tenantId)
+                .format("")
+                .build();
+
+        IdGenerationRequest idGenRequest = IdGenerationRequest.builder()
+                .requestInfo(requestInfo)
+                .idRequests(List.of(idRequest))
+                .build();
+
+        // Call the IDGen service
         String url = idgenHost + idgenPath;
 
-        ResponseEntity<Map> response = restTemplate.postForEntity(url, payload, Map.class);
+        ResponseEntity<IdGenerationResponse> response = restTemplate.postForEntity(
+                url, idGenRequest, IdGenerationResponse.class
+        );
 
-        if (!response.getStatusCode().is2xxSuccessful()) {
-            throw new RuntimeException("Failed to generate Facility ID");
+        if (!response.getStatusCode().is2xxSuccessful() || response.getBody() == null) {
+            throw new RuntimeException("Failed to generate Facility ID from IDGen service");
         }
 
-        Map<String, Object> body = response.getBody();
-        List<Map<String, Object>> idResponses = (List<Map<String, Object>>) body.get("idResponses");
+        List<IdResponse> idResponses = response.getBody().getIdResponses();
 
-        if (idResponses.isEmpty() || idResponses.get(0).get("id") == null) {
-            throw new IllegalArgumentException("IDGen returned empty ID");
+        if (idResponses == null || idResponses.isEmpty() || idResponses.getFirst().getId() == null) {
+            throw new IllegalArgumentException("IDGen returned empty or invalid ID");
         }
 
-        return UUID.fromString((String) idResponses.get(0).get("id"));
+        return idResponses.getFirst().getId();
     }
+
 }
 
